fixing swagger: should be able to access the testing API now
